public/lite/api/en/r1.7/_sources/generate/program_listing_file_include_core_utils_visible.h.rst.txt
:gitee_url: https://gitee.com/mindspore/docs


.. _program_listing_file_include_core_utils_visible.h:

Program Listing for File visible.h
==================================

|exhale_lsh| :ref:`Return to documentation for file <file_include_core_utils_visible.h>` (``include/core/utils/visible.h``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS

.. code-block:: cpp

   
   #ifndef MINDSPORE_CORE_UTILS_VISIBLE_H_
   #define MINDSPORE_CORE_UTILS_VISIBLE_H_
   
   #if (defined(_WIN32) || defined(__WIN32__) || defined(WIN32) || defined(__CYGWIN__))
   #ifdef BUILDING_DLL
   #define MS_CORE_API __declspec(dllexport)
   #define MS_EXPORT __declspec(dllexport)
   #define GVAR_DEF(type, name, value) MS_CORE_API inline const type name = value;
   #else
   #define MS_CORE_API __declspec(dllimport)
   #define MS_EXPORT __declspec(dllimport)
   #define GVAR_DEF(type, name, value) MS_CORE_API extern const type name;
   #endif
   #define MS_LOCAL
   #else
   #define MS_CORE_API __attribute__((visibility("default")))
   #define MS_EXPORT __attribute__((visibility("default")))
   #define MS_LOCAL __attribute__((visibility("hidden")))
   #define GVAR_DEF(type, name, value) MS_CORE_API inline const type name = value;
   #endif
   #endif  // MINDSPORE_CORE_UTILS_VISIBLE_H_
